dataset1235/2025-2/1153765216/users/1452895412/executions/2814675586_1026882843.log
== SUBMISSION (2025-08-26 19:34:45)
-- CODE: 
import math
def main.py():
 raio = float(input(print("Digite o raio: ")))
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    def main.py():
            ^
SyntaxError: expected '('
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    def main.py():
            ^
SyntaxError: expected '('
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    def main.py():
            ^
SyntaxError: expected '('
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    def main.py():
            ^
SyntaxError: expected '('
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    def main.py():
            ^
SyntaxError: expected '('
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    def main.py():
            ^
SyntaxError: expected '('
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:40:40)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio * raio * pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * pi
                         ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:37:57)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * 3,14
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area,4))
          ^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area,4))
          ^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area,4))
          ^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area,4))
          ^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area,4))
          ^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area,4))
          ^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:45:16)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:19:45)
-- CODE: 
import math
def main(math)
  raio = float(input(print("Digite o raio: ")))
  area = math.pi * (raio ** 2)
  print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:39:05)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:45:14)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:35:04)
-- CODE: 
import math
def main(pi):
 raio = float(input(print("Digite o raio: ")))
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:46:03)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
round(print(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:45:50)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
round(print(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:37:43)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * pi
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:40:33)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio * raio * 3.14
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:15:34)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi() * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi() * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi() * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi() * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi() * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi() * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi() * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:46:20)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:42:03)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio * raio * mayh.pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * mayh.pi
                         ^^^^
NameError: name 'mayh' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * mayh.pi
                         ^^^^
NameError: name 'mayh' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * mayh.pi
                         ^^^^
NameError: name 'mayh' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * mayh.pi
                         ^^^^
NameError: name 'mayh' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * mayh.pi
                         ^^^^
NameError: name 'mayh' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio * raio * mayh.pi
                         ^^^^
NameError: name 'mayh' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:39)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = (raio ** 2) * 3.14
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:32:29)
-- CODE: 
import math
def main():
 raio = float(input())
 area = math.pi * (raio ** 2)
 print(f"(area:4f)")
if __name__ == "__main__":
  main()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
(area:4f)
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
(area:4f)
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
(area:4f)
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
(area:4f)
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
(area:4f)
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
(area:4f)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:43:16)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:19:25)
-- CODE: 
import math
def main()
 raio = float(input(print("Digite o raio: ")))
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:19:27)
-- CODE: 
import math
def main()
 raio = float(input(print("Digite o raio: ")))
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    def main()
              ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:42:16)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * math.pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:40:32)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio * raio * 3.14
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:13:53)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.py * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.py * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.py * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.py * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.py * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.py * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.py * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:19)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = (raio ** 2) * 3.14
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None0.007850000000000001
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None32.153600000000004
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None38.465
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None452.16
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None221.5584
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None346.185
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:38:20)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * pi
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:38:20)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
import math
def main():
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:37:35)
-- CODE: 
import math
 raio = float(input(print("Digite o raio: ")))
def main():
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    raio = float(input(print("Digite o raio: ")))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    raio = float(input(print("Digite o raio: ")))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    raio = float(input(print("Digite o raio: ")))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    raio = float(input(print("Digite o raio: ")))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    raio = float(input(print("Digite o raio: ")))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    raio = float(input(print("Digite o raio: ")))
IndentationError: unexpected indent
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:42:17)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * math.pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * math.pi
                       ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:19:43)
-- CODE: 
import math
def main(math)
  raio = float(input(print("Digite o raio: ")))
  area = math.pi * (raio ** 2)
  print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 2
    def main(math)
                  ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:34:04)
-- CODE: 
import math
def main():
 raio = float(input(print("Digite o raio: ")))
 area = math.pi * (raio ** 2)
 print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:32)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = (raio ** 2) * 3,14
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None(0.0075000000000000015, 14)
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None(30.720000000000006, 14)
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None(36.75, 14)
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None(432.0, 14)
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None(211.68, 14)
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None(330.75, 14)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:31:53)
-- CODE: 
import math
def main():
 raio = float(input())
 area = math.pi * (raio ** 2)
 print(f"(area:.4f)")
if __name__ == "__main__":
  main()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
(area:.4f)
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
(area:.4f)
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
(area:.4f)
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
(area:.4f)
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
(area:.4f)
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
(area:.4f)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:40:09)
-- CODE: 
import math
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:38:42)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:37:45)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * pi
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:14:39)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio ** 2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio ** 2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio ** 2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio ** 2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio ** 2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio ** 2)
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:37:10)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = pi * (raio**2)
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * (raio**2)
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:21:45)
-- CODE: 
import math
def main():
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 3
    raio = float(input(print("Digite o raio: ")))
    ^
IndentationError: expected an indented block after function definition on line 2
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 3
    raio = float(input(print("Digite o raio: ")))
    ^
IndentationError: expected an indented block after function definition on line 2
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 3
    raio = float(input(print("Digite o raio: ")))
    ^
IndentationError: expected an indented block after function definition on line 2
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 3
    raio = float(input(print("Digite o raio: ")))
    ^
IndentationError: expected an indented block after function definition on line 2
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 3
    raio = float(input(print("Digite o raio: ")))
    ^
IndentationError: expected an indented block after function definition on line 2
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 3
    raio = float(input(print("Digite o raio: ")))
    ^
IndentationError: expected an indented block after function definition on line 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:16:45)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = (math.pi) * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (math.pi) * (raio ** 2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (math.pi) * (raio ** 2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (math.pi) * (raio ** 2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (math.pi) * (raio ** 2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (math.pi) * (raio ** 2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (math.pi) * (raio ** 2)
            ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:38:40)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = raio ** 2 * pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = raio ** 2 * pi
                       ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:43:18)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:02)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = (raio ** 2) * pi
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (raio ** 2) * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (raio ** 2) * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (raio ** 2) * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (raio ** 2) * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (raio ** 2) * pi
                         ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (raio ** 2) * pi
                         ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:46:19)
-- CODE: 
raio = float(input(print("Digite o raio: ")))
area = math.pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:20:17)
-- CODE: 
import math
def main():
  raio = float(input(print("Digite o raio: ")))
  area = math.pi * (raio ** 2)
  print(round(area, 4))
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
None
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
None
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
None
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
None
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
None
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
